@startuml beauty_er

' ════════════════════════════════════════════
'  LAYOUT
' ════════════════════════════════════════════
skinparam linetype ortho
skinparam ranksep 70
skinparam nodesep 50
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 11
skinparam shadowing false
skinparam roundCorner 4

' ════════════════════════════════════════════
'  ENTITY STYLE
' ════════════════════════════════════════════
skinparam entity {
  BackgroundColor       #FFFFFF
  BorderColor           #888888
  FontColor             #000000
  HeaderBackgroundColor #EEEEEE
  HeaderFontColor       #000000
  HeaderFontSize        11
  HeaderFontStyle       bold
  AttributeFontSize     10
}

skinparam arrow {
  Color     #CC0000
  FontColor #CC0000
  FontSize  9
}

' ════════════════════════════════════════════
'  ENTITIES  (* = PK, # = FK)
' ════════════════════════════════════════════

entity "roles" {
  * id   : int <>
  --
  * code : varchar(50) <>
  name   : varchar(100)
}

entity "users" {
  * id            : bigint <>
  --
  * login         : varchar(64) <>
  * email         : varchar(255) <>
  password_hash   : varchar(255)
  full_name       : varchar(200)
  phone           : varchar(20)
  # role_id       : int <>
  is_active       : tinyint(1)
  created_at      : datetime
  updated_at      : datetime
}

entity "categories" {
  * id   : int <>
  --
  name   : varchar(80)
  sort   : tinyint
}

entity "masters" {
  * id             : int <>
  --
  # user_id        : bigint <>
  full_name        : varchar(200)
  specialization   : varchar(200)
  bio              : text
  photo_url        : varchar(255)
  experience_yrs   : tinyint
  is_active        : tinyint(1)
}

entity "services" {
  * id          : int <>
  --
  # category_id : int <>
  name          : varchar(200)
  description   : text
  price         : decimal(10,2)
  duration      : smallint
  is_active     : tinyint(1)
}

entity "master_services" {
  # master_id  : int <>
  # service_id : int <>
}

entity "working_hours" {
  * id          : int <>
  --
  # master_id   : int <>
  day_of_week   : tinyint
  start_time    : time
  end_time      : time
}

entity "appointments" {
  * id         : bigint <>
  --
  # user_id    : bigint <>
  # master_id  : int <>
  # service_id : int <>
  appt_date    : date
  appt_time    : time
  status       : enum
  comment      : text
  created_at   : datetime
  updated_at   : datetime
}

entity "reviews" {
  * id          : bigint <>
  --
  # user_id     : bigint <>
  # master_id   : int
  # service_id  : int
  rating        : tinyint
  body          : text
  is_approved   : tinyint(1)
  created_at    : datetime
}

entity "loyalty_points" {
  * id         : bigint <>
  --
  # user_id    : bigint <>
  points       : int
  reason       : varchar(255)
  created_at   : datetime
}

entity "notifications" {
  * id         : bigint <>
  --
  # user_id    : bigint <>
  type         : varchar(64)
  message      : text
  is_read      : tinyint(1)
  created_at   : datetime
}

entity "auth_log" {
  * id         : bigint <>
  --
  # user_id    : bigint
  action       : varchar(64)
  ip           : varchar(64)
  user_agent   : varchar(255)
  created_at   : datetime
}

entity "salon_settings" {
  * id    : int <>
  --
  * skey  : varchar(100) <>
  svalue  : text
}

' ════════════════════════════════════════════
'  RELATIONSHIPS
' ════════════════════════════════════════════

roles          ||--o{ users           : "role_id"
users          ||--o{ masters         : "user_id"
categories     ||--o{ services        : "category_id"
masters        ||--o{ master_services : "master_id"
services       ||--o{ master_services : "service_id"
masters        ||--o{ working_hours   : "master_id"
users          ||--o{ appointments    : "user_id"
masters        ||--o{ appointments    : "master_id"
services       ||--o{ appointments    : "service_id"
users          ||--o{ reviews         : "user_id"
masters        |o--o{ reviews         : "master_id"
services       |o--o{ reviews         : "service_id"
users          ||--o{ loyalty_points  : "user_id"
users          ||--o{ notifications   : "user_id"
users          ||--o{ auth_log        : "user_id"

@enduml
